--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Adrian portfolio</title>
 </head>
 <body>
@@ -59,7 +59,7 @@
          <a href="#contact">Contact Me</a>
     </div>
       <div class="profile-image">
-          <img src="images/acc2.jpg" alt="">
+          <img src="assets/images/acc2.jpg" alt="">
       </div>
  </div>
 
@@ -78,28 +78,28 @@
        
         <div class="category-designing showCategory">
              <div class="pic">
-                <a href="https://acerva1978.github.io/TriviaGame/"><img src="images/trivia.png" alt=""></a>
+                <a href="https://acerva1978.github.io/TriviaGame/"><img src="assets/images/trivia.png" alt=""></a>
             </div>
              <div class="pic2">
-                <a href="https://acerva1978.github.io/Train-Scheduler/"><img src="images/train.png" alt=""></a>
+                <a href="https://acerva1978.github.io/Train-Scheduler/"><img src="assets/images/train.png" alt=""></a>
              </div> 
              <div class="pic3"> 
-                <a href="https://friendfinder80s.herokuapp.com/"><img src="images/friend.png" alt=""></a>
+                <a href="https://friendfinder80s.herokuapp.com/"><img src="assets/images/friend.png" alt=""></a>
              </div>
              <div class="pic4">
-                <a href="https://github.com/Acerva1978/Node.js-MySQL-Bamazon"><img src="images/Bamazon.png" alt=""></a>
+                <a href="https://github.com/Acerva1978/Node.js-MySQL-Bamazon"><img src="assets/images/Bamazon.png" alt=""></a>
              </div>
             <div class="pic5">
-                <a href="https://evening-plains-55657.herokuapp.com/burgers"><img src="images/EatThatBurger.png" alt=""></a>
+                <a href="https://evening-plains-55657.herokuapp.com/burgers"><img src="assets/images/EatThatBurger.png" alt=""></a>
             </div>
             <div class="pic6">
-                <a href="https://acerva1978.github.io/SMU-Project-One-Adrian/"><img src="images/beerme.png" alt=""></a>
+                <a href="https://acerva1978.github.io/SMU-Project-One-Adrian/"><img src="assets/images/beerme.png" alt=""></a>
             </div>
             <div class="pic7">
-                <a href="https://food-no-more-2.herokuapp.com/"><img src="images/foodnomore.png" alt=""></a>
+                <a href="https://food-no-more-2.herokuapp.com/"><img src="assets/images/foodnomore.png" alt=""></a>
             </div>
             <div class="pic8">
-               <a href="https://ridonk-stories.herokuapp.com/"><img src="images/ridonk_stories.png" alt=""></a>
+               <a href="https://ridonk-stories.herokuapp.com/"><img src="assets/images/ridonk_stories.png" alt=""></a>
             </div>
      </div>
     </div>
